2008-10-30  Tom Tromey  <tromey@redhat.com>

	* utils.c (make_cleanup_close): Use make_cleanup_dtor.
	(do_close_cleanup): Don't free 'fd'.

2008-10-28  Tom Tromey  <tromey@redhat.com>

	* source.c (symtab_to_fullname): Test 'r >= 0'.
	(psymtab_to_fullname): Likewise.
	(get_filename_and_charpos): Make a cleanup.
	(forward_search_command): Likewise.
	(reverse_search_command): Likewise.
	* exec.c (exec_file_attach): Close scratch_chan on failure.
	* nto-procfs.c (procfs_open): Make a cleanup.
	(procfs_pidlist): Likewise.
	(do_closedir_cleanup): New function.

2008-10-30  Andreas Schwab  <schwab@suse.de>

	* infcmd.c (construct_inferior_arguments): Handle newlines
	specially.

2008-10-30  Joel Brobecker  <brobecker@adacore.com>

	* breakpoint.h (enum bptype): Delete bp_catch_exec.
	* breakpoint.c (insert_catchpoint): Remove handling for
	bp_catch_exec breakpoint kinds.
	(insert_bp_location, update_breakpoints_after_exec, remove_breakpoint)
	(ep_is_catchpoint, print_it_typical, bpstat_check_location),
	(bpstat_check_location, bpstat_what, print_one_breakpoint_location)
	(print_one_breakpoint_location, user_settable_breakpoint)
	(breakpoint_address_is_meaningful, adjust_breakpoint_address)
	(allocate_bp_location, mention, breakpoint_re_set_one)
	(disable_command, enable_command): Likewise.
	(create_exec_event_catchpoint): Delete.
	(insert_catch_exec, remove_catch_exec, breakpoint_hit_catch_exec)
	(print_it_catch_exec, print_one_catch_exec, print_mention_catch_exec):
	New functions.
	(catch_exec_breakpoint_ops): New static global.
	(catch_exec_command_1): Use create_catchpoint instead of
	create_exec_event_catchpoint to create the exec catchpoint.

2008-10-28  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (SUBDIR_CLI_OBS): Don't mention cli-utils.o.
	(SUBDIR_CLI_DEPS): Don't mention cli-utils.c.
	(HFILES_NO_SRCDIR): Don't mention cli-utils.h.
	(cli-utils.o): Remove.
	* cli/cli-utils.c: Remove.
	* cli/cli-utils.h: Remove.

2008-10-28  Tom Tromey  <tromey@redhat.com>
